Add PTE Academic Vocabulary Vault page and navigation links

--- a/gre.html
+++ b/gre.html
@@ -62,6 +62,9 @@
                         <a href="sat.html"
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-purple-600">SAT
                             Track</a>
+                        <a href="pte.html"
+                            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-cyan-600">PTE
+                            Track</a>
                     </div>
                 </div>
                 <!-- Other links -->
