--- a/pte.html
+++ b/pte.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOEFL Essential Track | HowdyBuzz</title>
+    <title>PTE Academic Vocabulary Vault | HowdyBuzz</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
 
 <body class="bg-gray-50 text-gray-800 antialiased overflow-x-hidden">
 
-    <!-- Reuse exact Nav -->
+    <!-- Nav -->
     <nav class="fixed top-0 left-0 w-full z-50 bg-[#0b1a2a] border-b border-white/10">
         <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
             <a href="index.html" class="flex items-center gap-3 group">
@@ -81,73 +81,76 @@
         </div>
     </nav>
 
-    <!-- Header -->
-    <header class="pt-32 pb-20 px-6 bg-gradient-to-b from-[#0b1a2a] to-orange-900 text-white">
+    <!-- Hero -->
+    <!-- Digital Blue and Slate Grey Color Scheme -->
+    <header class="pt-32 pb-20 px-6 bg-gradient-to-b from-slate-900 to-cyan-900 text-white">
         <div class="max-w-4xl mx-auto text-center">
             <span
-                class="inline-block py-1 px-3 rounded-full bg-orange-500/20 border border-orange-400/30 text-orange-300 text-sm font-semibold mb-6">Test
-                of English as a Foreign Language</span>
-            <h1 class="text-5xl md:text-6xl font-bold mb-6">Score <span class="text-brand-gold">110+</span> on TOEFL.
+                class="inline-block py-1 px-3 rounded-full bg-cyan-900/50 border border-cyan-400/30 text-cyan-300 text-sm font-semibold mb-6">Pearson
+                Test of English</span>
+            <h1 class="text-5xl md:text-6xl font-bold mb-6">PTE <span class="text-brand-gold">Academic Vocabulary
+                    Vault.</span>
             </h1>
-            <p class="text-xl text-gray-300 max-w-2xl mx-auto">Master North American campus vocabulary. Ace the
-                Integrated Tasks with precise academic transitions.</p>
+            <p class="text-xl text-gray-300 max-w-2xl mx-auto">Master the integrated skills vocabulary for speaking,
+                writing, and reading.</p>
         </div>
     </header>
 
     <!-- Content -->
     <main class="max-w-7xl mx-auto px-6 py-16 space-y-20">
         <section>
-            <h2 class="text-3xl font-bold text-[#0b1a2a] mb-12 text-center">Why our TOEFL Track works</h2>
+            <h2 class="text-3xl font-bold text-[#0b1a2a] mb-12 text-center">Why our PTE Track works</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <!-- Card 1: Lecture Readiness -->
-                <div
-                    class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow text-center">
-                    <div
-                        class="w-20 h-20 mx-auto bg-orange-100 rounded-lg flex items-center justify-center mb-6 text-orange-600">
-                        <!-- Soundwave / Audio Icon -->
-                        <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 10v4m4-6v10m4-8v6m4-10v14m4-8v4"></path>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Lecture Readiness</h3>
-                    <p class="text-gray-600">Focus on academic transitional phrases used in campus lectures</p>
-                </div>
 
-                <!-- Card 2: Integrated Context -->
+                <!-- Card 1: Oral Fluency -->
                 <div
                     class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow text-center">
                     <div
-                        class="w-20 h-20 mx-auto bg-orange-100 rounded-lg flex items-center justify-center mb-6 text-orange-600">
-                        <!-- Graduation Cap Icon -->
+                        class="w-20 h-20 mx-auto bg-cyan-50 rounded-lg flex items-center justify-center mb-6 text-cyan-600">
+                        <!-- Microphone Icon -->
                         <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l9-5-9-5-9 5 9 5z"></path>
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z">
-                            </path>
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222">
+                                d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z">
                             </path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Integrated Context</h3>
-                    <p class="text-gray-600">Examples mimicking TOEFL Listening and Writing prompts.</p>
+                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Oral Fluency Optimizer</h3>
+                    <p class="text-gray-600">Master word stress patterns to maximize your AI score in Read Aloud and
+                        Repeat Sentence.</p>
                 </div>
 
-                <!-- Card 3: Auditory Retention -->
+                <!-- Card 2: Writing Range -->
                 <div
                     class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow text-center">
                     <div
-                        class="w-20 h-20 mx-auto bg-orange-100 rounded-lg flex items-center justify-center mb-6 text-orange-600">
-                        <!-- Clock Icon -->
+                        class="w-20 h-20 mx-auto bg-cyan-50 rounded-lg flex items-center justify-center mb-6 text-cyan-600">
+                        <!-- Pen Nib Icon -->
                         <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
+                            </path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Auditory Retention</h3>
-                    <p class="text-gray-600">Saturday recaps focused on identifying words in spoken English.</p>
+                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Academic Writing Range</h3>
+                    <p class="text-gray-600">Learn essential academic collocations to boost your Written Discourse score
+                        in PTE essays.</p>
+                </div>
+
+                <!-- Card 3: Reading Logic -->
+                <div
+                    class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow text-center">
+                    <div
+                        class="w-20 h-20 mx-auto bg-cyan-50 rounded-lg flex items-center justify-center mb-6 text-cyan-600">
+                        <!-- Open Book Icon -->
+                        <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
+                            </path>
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-bold mb-2 text-midnight-blue">Reading Context Engine</h3>
+                    <p class="text-gray-600">Develop the contextual logic required to ace Reading and Writing: Fill in
+                        the Blanks.</p>
                 </div>
             </div>
         </section>
@@ -156,8 +159,8 @@
         <section id="weekly-feed-section">
             <div class="flex flex-col md:flex-row items-end justify-between mb-8 gap-4">
                 <div>
-                    <span class="text-sm font-bold tracking-wider text-orange-600 uppercase">Weekly Rotation</span>
-                    <h2 class="text-3xl font-bold mt-1 text-[#0b1a2a]">Latest TOEFL Review</h2>
+                    <span class="text-sm font-bold tracking-wider text-cyan-600 uppercase">Weekly Rotation</span>
+                    <h2 class="text-3xl font-bold mt-1 text-[#0b1a2a]">Latest PTE Review</h2>
                     <p class="text-gray-500 mt-2">Curated selection from last week's Daily 5.</p>
                 </div>
                 <a href="daily-archives.html"
@@ -166,7 +169,7 @@
                 </a>
             </div>
 
-            <div id="toefl-feed" class="grid grid-cols-1 gap-6">
+            <div id="pte-feed" class="grid grid-cols-1 gap-6">
                 <!-- Placeholder / Loader -->
                 <div class="bg-white rounded-2xl shadow-lg border border-gray-100 p-8 text-center py-16">
                     <div class="inline-block animate-pulse">
@@ -180,11 +183,11 @@
         </section>
     </main>
 
-    <!-- Reuse exact Footer -->
+    <!-- Footer -->
     <!-- Subscribe Section -->
     <section class="max-w-4xl mx-auto px-6 py-16 text-center">
         <div
-            class="bg-gradient-to-br from-[#0b1a2a] to-orange-900 rounded-3xl p-10 md:p-16 relative overflow-hidden shadow-2xl">
+            class="bg-gradient-to-br from-slate-900 to-cyan-900 rounded-3xl p-10 md:p-16 relative overflow-hidden shadow-2xl">
             <!-- Background Decoration -->
             <div class="absolute top-0 right-0 -mt-10 -mr-10 w-40 h-40 bg-white opacity-5 rounded-full blur-3xl"></div>
             <div
@@ -249,6 +252,9 @@
                         <li><a href="sat.html"
                                 class="text-gray-300 hover:text-white hover:text-brand-gold transition-colors block w-fit">SAT
                                 Prep</a></li>
+                        <li><a href="pte.html"
+                                class="text-gray-300 hover:text-white hover:text-brand-gold transition-colors block w-fit">PTE
+                                Academic</a></li>
                     </ul>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-6 border border-white/10 backdrop-blur-sm">
