--- a/daily-archives.html
+++ b/daily-archives.html
@@ -61,6 +61,9 @@
                         <a href="sat.html"
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-purple-600">SAT
                             Track</a>
+                        <a href="pte.html"
+                            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-cyan-600">PTE
+                            Track</a>
                     </div>
                 </div>
                 <a href="daily-archives.html" class="text-white font-bold transition-colors">Daily 5 Words</a>
