--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                         <a href="sat.html"
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-purple-600">SAT
                             Track</a>
+                        <a href="pte.html"
+                            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-cyan-600">PTE
+                            Track</a>
                     </div>
                 </div>
                 <a href="daily-archives.html" class="text-gray-300 hover:text-white font-medium transition-colors">Daily
@@ -222,6 +225,26 @@
                     <p class="text-gray-600 leading-relaxed">Critical Reading & Vocabulary for Undergrad Admissions.</p>
                     <div
                         class="mt-6 flex items-center text-purple-600 font-semibold text-sm group-hover:translate-x-2 transition-transform">
+                        Start Track <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
+                        </svg>
+                    </div>
+                </a>
+
+                <!-- PTE Card -->
+                <a href="pte.html"
+                    class="group bg-white rounded-2xl p-8 shadow-sm hover:shadow-xl border border-gray-100 transition-all duration-300 hover:-translate-y-1">
+                    <div
+                        class="h-16 w-16 bg-cyan-50 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-cyan-600 transition-colors">
+                        <span class="text-cyan-600 font-bold text-xl group-hover:text-white">PTE</span>
+                    </div>
+                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-1">PTE</h3>
+                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-4">Pearson Test of English
+                    </p>
+                    <p class="text-gray-600 leading-relaxed">Integrated Speaking & Writing Vocabulary for AI Scores.</p>
+                    <div
+                        class="mt-6 flex items-center text-cyan-600 font-semibold text-sm group-hover:translate-x-2 transition-transform">
                         Start Track <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
