Add PTE Academic link to footer across all pages

--- a/toefl.html
+++ b/toefl.html
@@ -249,6 +249,9 @@
                         <li><a href="sat.html"
                                 class="text-gray-300 hover:text-white hover:text-brand-gold transition-colors block w-fit">SAT
                                 Prep</a></li>
+                        <li><a href="pte.html"
+                                class="text-gray-300 hover:text-white hover:text-brand-gold transition-colors block w-fit">PTE
+                                Academic</a></li>
                     </ul>
                 </div>
                 <div class="bg-white/5 rounded-2xl p-6 border border-white/10 backdrop-blur-sm">
