Update footer description to include PTE

--- a/vocabulary-vault.html
+++ b/vocabulary-vault.html
@@ -215,8 +215,9 @@
                                 class="text-brand-gold">Buzz</span></span>
                     </a>
                     <p class="text-gray-400 text-sm leading-relaxed">
-                        Master Vocabulary for Global Exams. The most comprehensive platform for GRE, GMAT, IELTS, TOEFL
-                        and SAT aspirants.
+                        Master Vocabulary for Global Exams. The most comprehensive platform for GRE, GMAT, IELTS, TOEFL,
+                        SAT
+                        and PTE aspirants.
                     </p>
                     <div class="pt-4">
                         <h4 class="text-white font-semibold mb-2 text-sm uppercase tracking-wider">Contact Us</h4>
