--- a/word/Aberration.html
+++ b/word/Aberration.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html><html><body style="font-family:Arial,sans-serif; padding:40px; max-width:800px; margin:auto;">
-    <h1>Word Vault: Aberration</h1>
-    <p><strong>Category:</strong> undefined</p>
-    <p style="font-size:20px;">Aberration</p>
-    <blockquote style="font-style:italic; border-left:5px solid #ccc; padding-left:15px; margin:20px 0;">""</blockquote>
-    <h3>Exam Strategy</h3>
-    <ul>
-      <li><strong>GRE:</strong> N/A</li>
-      <li><strong>GMAT:</strong> N/A</li>
-      <li><strong>IELTS:</strong> N/A</li>
-      <li><strong>PTE:</strong> N/A</li>
-    </ul>
-    <a href="https://howdybuzz.com/vault.html">Return to Search Gallery</a>
-  </body></html>
+<!DOCTYPE html><html><body><h1>Aberration</h1><p>Aberration</p><a href="https://howdybuzz.com/daily5.html">Back to Daily 5</a></body></html>
