Cleanup and sync

--- a/word/aberration.html
+++ b/word/aberration.html
@@ -1,1 +1,1 @@
-<html><head><title>Aberration</title></head><body><h1>Aberration</h1><p>A departure from what is normal or expected.</p><p><i>The snowstorm in April was a total aberration.</i></p></body></html>
+<!DOCTYPE html><html><body><h1>Aberration</h1><p>Aberration</p><a href="https://howdybuzz.com/daily5.html">Back to Daily 5</a></body></html>
