--- a/word/Abate.html
+++ b/word/Abate.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><body><h1>Abate</h1><p>Abate</p><a href="https://howdybuzz.com/daily5.html">Back to Daily 5</a></body></html>
+<!DOCTYPE html><html><body><h1>Abate</h1><p>Abate</p><a href="https://howdybuzz.com/daily-archives.html">Back to Daily Archives</a></body></html>
