Update Word: Aberrant

--- a/word/Aberrant.html
+++ b/word/Aberrant.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><body><h1>Aberrant</h1><p>Aberrant</p><a href="https://howdybuzz.com/daily5.html">Back to Daily 5</a></body></html>
+<!DOCTYPE html><html><body><h1>Aberrant</h1><p>Aberrant</p><a href="https://howdybuzz.com/daily-archives.html">Back to Daily Archives</a></body></html>
