--- a/word/Aberration.html
+++ b/word/Aberration.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><body><h1>Aberration</h1><p>Aberration</p><a href="https://howdybuzz.com/daily5.html">Back to Daily 5</a></body></html>
+<!DOCTYPE html><html><body><h1>Aberration</h1><p>Aberration</p><a href="https://howdybuzz.com/daily-archives.html">Back to Daily Archives</a></body></html>
