--- a/daily/2026-02-18.html
+++ b/daily/2026-02-18.html
@@ -43,7 +43,7 @@
     <header class="pt-32 pb-20 px-6 bg-gradient-to-b from-[#0b1a2a] to-fuchsia-900 text-white relative overflow-hidden">
         <div class="max-w-4xl mx-auto text-center relative z-10">
             <span class="inline-block py-1 px-3 rounded-full bg-fuchsia-500/20 border border-fuchsia-400/30 text-fuchsia-300 text-sm font-semibold mb-6">
-                IELTS Mastery Track
+                Daily Vocabulary Mastery
             </span>
             <h1 class="text-4xl md:text-5xl font-bold mb-6">Today's <span class="text-brand-gold">High-Impact</span> Set.</h1>
             <p class="text-xl text-gray-300 max-w-2xl mx-auto">
@@ -80,15 +80,7 @@
           <p class="text-gray-800 italic font-medium">"Check vault for examples."</p>
         </div>
 
-        <div class="flex items-start gap-3 bg-fuchsia-50/50 p-4 rounded-lg">
-          <span class="text-fuchsia-600 mt-1">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-          </span>
-          <div>
-            <span class="block text-xs font-bold text-fuchsia-900 uppercase tracking-wide mb-1">IELTS Strategy</span>
-            <p class="text-sm text-fuchsia-800">Focus on precise application in context.</p>
-          </div>
-        </div>
+        <!-- REMOVED: Exam Strategy Section was here -->
 
         <div class="pt-4 border-t border-gray-100">
            <a href="https://howdybuzz.com/word/Abate.html" class="inline-flex items-center text-sm font-bold text-[#0b1a2a] hover:text-brand-gold transition-colors group">
@@ -124,15 +116,7 @@
           <p class="text-gray-800 italic font-medium">"Check vault for examples."</p>
         </div>
 
-        <div class="flex items-start gap-3 bg-fuchsia-50/50 p-4 rounded-lg">
-          <span class="text-fuchsia-600 mt-1">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-          </span>
-          <div>
-            <span class="block text-xs font-bold text-fuchsia-900 uppercase tracking-wide mb-1">IELTS Strategy</span>
-            <p class="text-sm text-fuchsia-800">Focus on precise application in context.</p>
-          </div>
-        </div>
+        <!-- REMOVED: Exam Strategy Section was here -->
 
         <div class="pt-4 border-t border-gray-100">
            <a href="https://howdybuzz.com/word/Abbreviate.html" class="inline-flex items-center text-sm font-bold text-[#0b1a2a] hover:text-brand-gold transition-colors group">
@@ -168,15 +152,7 @@
           <p class="text-gray-800 italic font-medium">"Check vault for examples."</p>
         </div>
 
-        <div class="flex items-start gap-3 bg-fuchsia-50/50 p-4 rounded-lg">
-          <span class="text-fuchsia-600 mt-1">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-          </span>
-          <div>
-            <span class="block text-xs font-bold text-fuchsia-900 uppercase tracking-wide mb-1">IELTS Strategy</span>
-            <p class="text-sm text-fuchsia-800">Focus on precise application in context.</p>
-          </div>
-        </div>
+        <!-- REMOVED: Exam Strategy Section was here -->
 
         <div class="pt-4 border-t border-gray-100">
            <a href="https://howdybuzz.com/word/Aberrant.html" class="inline-flex items-center text-sm font-bold text-[#0b1a2a] hover:text-brand-gold transition-colors group">
@@ -212,15 +188,7 @@
           <p class="text-gray-800 italic font-medium">"Check vault for examples."</p>
         </div>
 
-        <div class="flex items-start gap-3 bg-fuchsia-50/50 p-4 rounded-lg">
-          <span class="text-fuchsia-600 mt-1">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-          </span>
-          <div>
-            <span class="block text-xs font-bold text-fuchsia-900 uppercase tracking-wide mb-1">IELTS Strategy</span>
-            <p class="text-sm text-fuchsia-800">Focus on precise application in context.</p>
-          </div>
-        </div>
+        <!-- REMOVED: Exam Strategy Section was here -->
 
         <div class="pt-4 border-t border-gray-100">
            <a href="https://howdybuzz.com/word/Aberration.html" class="inline-flex items-center text-sm font-bold text-[#0b1a2a] hover:text-brand-gold transition-colors group">
@@ -256,15 +224,7 @@
           <p class="text-gray-800 italic font-medium">"Check vault for examples."</p>
         </div>
 
-        <div class="flex items-start gap-3 bg-fuchsia-50/50 p-4 rounded-lg">
-          <span class="text-fuchsia-600 mt-1">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-          </span>
-          <div>
-            <span class="block text-xs font-bold text-fuchsia-900 uppercase tracking-wide mb-1">IELTS Strategy</span>
-            <p class="text-sm text-fuchsia-800">Focus on precise application in context.</p>
-          </div>
-        </div>
+        <!-- REMOVED: Exam Strategy Section was here -->
 
         <div class="pt-4 border-t border-gray-100">
            <a href="https://howdybuzz.com/word/Abet.html" class="inline-flex items-center text-sm font-bold text-[#0b1a2a] hover:text-brand-gold transition-colors group">
