--- a/daily-archives.html
+++ b/daily-archives.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -103,159 +103,6 @@
 
         <!-- Feed Container -->
         <div id="daily-feed-container" class="space-y-10">
-
-            <!-- Card for 18 FEB -->
-            <article class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row mb-10">
-                <div class="bg-[#0b1a2a] md:w-32 flex flex-col items-center justify-center p-6 text-white text-center shrink-0">
-                    <span class="text-xs uppercase tracking-wider opacity-75">FEB</span>
-                    <span class="text-3xl font-bold">18</span>
-                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
-                </div>
-                <div class="p-8 flex-1">
-                    <div class="flex items-center gap-3 mb-3">
-                        <span class="px-3 py-1 bg-brand-gold/20 text-yellow-800 text-xs font-bold rounded-full">#508</span>
-                        <span class="text-sm text-gray-500">Wednesday Edition</span>
-                    </div>
-                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
-                        <a href="daily/2026-02-18.html">Abate, Abbreviate, Aberrant...</a>
-                    </h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Today's curated vocabulary set for global exam mastery.
-                    </p>
-                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
-                        <div class="flex gap-2">
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs uppercase">IELTS</span>
-                        </div>
-                        <a href="daily/2026-02-18.html" class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</a>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Card for 18 FEB -->
-            <article class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row mb-10">
-                <div class="bg-[#0b1a2a] md:w-32 flex flex-col items-center justify-center p-6 text-white text-center shrink-0">
-                    <span class="text-xs uppercase tracking-wider opacity-75">FEB</span>
-                    <span class="text-3xl font-bold">18</span>
-                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
-                </div>
-                <div class="p-8 flex-1">
-                    <div class="flex items-center gap-3 mb-3">
-                        <span class="px-3 py-1 bg-brand-gold/20 text-yellow-800 text-xs font-bold rounded-full">#696</span>
-                        <span class="text-sm text-gray-500">Wednesday Edition</span>
-                    </div>
-                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
-                        <a href="daily/2026-02-18.html">Abate, Abbreviate, Aberrant...</a>
-                    </h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Today's curated vocabulary set for global exam mastery.
-                    </p>
-                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
-                        <div class="flex gap-2">
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs uppercase">IELTS</span>
-                        </div>
-                        <a href="daily/2026-02-18.html" class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</a>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Logic: Automation will clone these or inject similar structures. -->
-
-            <!-- Card 1 (Example Big Card) -->
-            <article
-                class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row">
-                <div
-                    class="bg-[#0b1a2a] md:w-32 flex flex-col items-center justify-center p-6 text-white text-center shrink-0">
-                    <span class="text-xs uppercase tracking-wider opacity-75">Feb</span>
-                    <span class="text-3xl font-bold">02</span>
-                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
-                </div>
-                <div class="p-8 flex-1">
-                    <div class="flex items-center gap-3 mb-3">
-                        <span
-                            class="px-3 py-1 bg-brand-gold/20 text-yellow-800 text-xs font-bold rounded-full">#105</span>
-                        <span class="text-sm text-gray-500">Monday Edition</span>
-                    </div>
-                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
-                        <a href="#">Ebullient, Taciturn, Maudlin...</a>
-                    </h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Today's set focuses on emotional states and personality descriptors. Perfect for character
-                        analysis in reading passages and descriptive writing.
-                    </p>
-                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
-                        <div class="flex gap-2">
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs">GRE</span>
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs">SAT</span>
-                        </div>
-                        <button class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</button>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Card 2 -->
-            <article
-                class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row">
-                <div
-                    class="bg-gray-100 md:w-32 flex flex-col items-center justify-center p-6 text-gray-600 text-center shrink-0">
-                    <span class="text-xs uppercase tracking-wider opacity-75">Feb</span>
-                    <span class="text-3xl font-bold">01</span>
-                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
-                </div>
-                <div class="p-8 flex-1">
-                    <div class="flex items-center gap-3 mb-3">
-                        <span class="px-3 py-1 bg-gray-200 text-gray-700 text-xs font-bold rounded-full">#104</span>
-                        <span class="text-sm text-gray-500">Sunday Edition</span>
-                    </div>
-                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
-                        <a href="#">Obfuscate, Lucid, Esoteric...</a>
-                    </h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Words related to clarity and confusion. High frequency in academic papers and research
-                        abstracts.
-                    </p>
-                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
-                        <div class="flex gap-2">
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs">TOEFL</span>
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs">GMAT</span>
-                        </div>
-                        <button class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</button>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Card 3 -->
-            <article
-                class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row opacity-80 hover:opacity-100">
-                <div
-                    class="bg-gray-100 md:w-32 flex flex-col items-center justify-center p-6 text-gray-600 text-center shrink-0">
-                    <span class="text-xs uppercase tracking-wider opacity-75">Jan</span>
-                    <span class="text-3xl font-bold">31</span>
-                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
-                </div>
-                <div class="p-8 flex-1">
-                    <div class="flex items-center gap-3 mb-3">
-                        <span class="px-3 py-1 bg-gray-200 text-gray-700 text-xs font-bold rounded-full">#103</span>
-                        <span class="text-sm text-gray-500">Saturday Edition</span>
-                    </div>
-                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
-                        <a href="#">Ephemeral, Perennial, Transient...</a>
-                    </h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Time-based vocabulary. Essential for describing duration and historical context.
-                    </p>
-                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
-                        <div class="flex gap-2">
-                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs">IELTS</span>
-                        </div>
-                        <button class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</button>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Placeholder for more items -->
-            <div class="border-2 border-dashed border-gray-200 rounded-2xl p-12 text-center">
-                <p class="text-gray-400">Loading more historical archives...</p>
-            </div>
 
         </div>
 
