--- a/word/Abbreviate.html
+++ b/word/Abbreviate.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><body><h1>Abbreviate</h1><p>Abbreviate</p><a href="https://howdybuzz.com/daily-archives.html">Back to Daily Archives</a></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abbreviate | HowdyBuzz Vault</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 text-gray-800 font-['Outfit'] p-10 max-w-3xl mx-auto">
+    <a href="https://howdybuzz.com/vocabulary-vault.html" class="text-blue-600 font-bold mb-6 inline-block">&larr; Back to Vault</a>
+    <div class="bg-white p-8 rounded-2xl shadow-sm border border-gray-100">
+        <h1 class="text-5xl font-bold mb-4">Abbreviate</h1>
+        <p class="text-xl text-gray-600 mb-6">To shorten a word or phrase by omitting letters.</p>
+        <div class="bg-gray-50 p-6 rounded-xl border-l-4 border-[#FFD700]">
+            <h3 class="text-sm font-bold text-gray-500 uppercase tracking-wide mb-2">Master Sentence</h3>
+            <p class="text-gray-800 italic">To save time during the lecture, the student decided to abbreviate "government" as "govt."</p>
+        </div>
+    </div>
+</body>
+</html>
