--- a/daily-archives.html
+++ b/daily-archives.html
@@ -113,6 +113,33 @@
                 </div>
                 <div class="p-8 flex-1">
                     <div class="flex items-center gap-3 mb-3">
+                        <span class="px-3 py-1 bg-brand-gold/20 text-yellow-800 text-xs font-bold rounded-full">#2</span>
+                        <span class="text-sm text-gray-500">Saturday Edition</span>
+                    </div>
+                    <h3 class="text-2xl font-bold text-[#0b1a2a] mb-3 group-hover:text-blue-600 transition-colors">
+                        <a href="daily/2026-02-28.html">Abate, Abbreviate, Aberrant...</a>
+                    </h3>
+                    <p class="text-gray-600 mb-6 leading-relaxed">
+                        Today's curated vocabulary set for global exam mastery.
+                    </p>
+                    <div class="flex items-center justify-between border-t border-gray-100 pt-6">
+                        <div class="flex gap-2">
+                            <span class="px-2 py-1 bg-gray-100 text-gray-600 rounded text-xs uppercase">Vocabulary</span>
+                        </div>
+                        <a href="daily/2026-02-28.html" class="text-blue-600 font-bold text-sm hover:underline">Read & Quiz &rarr;</a>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Card for 28 FEB -->
+            <article class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col md:flex-row mb-10">
+                <div class="bg-[#0b1a2a] md:w-32 flex flex-col items-center justify-center p-6 text-white text-center shrink-0">
+                    <span class="text-xs uppercase tracking-wider opacity-75">FEB</span>
+                    <span class="text-3xl font-bold">28</span>
+                    <span class="text-xs uppercase tracking-wider opacity-75 mt-1">2026</span>
+                </div>
+                <div class="p-8 flex-1">
+                    <div class="flex items-center gap-3 mb-3">
                         <span class="px-3 py-1 bg-brand-gold/20 text-yellow-800 text-xs font-bold rounded-full">#1</span>
                         <span class="text-sm text-gray-500">Saturday Edition</span>
                     </div>
